{
    "name": "CustomInput",
    "maps": [
        {
            "name": "Player",
            "id": "ec565833-335f-4d97-a4fe-914b4120a73e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "2e16b10e-a4a8-490e-8387-f85bac9faa71",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Actions",
                    "type": "PassThrough",
                    "id": "e66baf15-3a1d-4270-b96a-85546ffd96ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ca6d6166-c741-4722-954e-2a0374a98c4f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "eeeea873-330c-4319-abc9-62fd3d6d7f6a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bcb2f1c1-9910-4d01-babe-29d2fe5bfb13",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "769386f5-a442-4ee6-9065-f89c8b5c4338",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6a2e8cd7-f1cf-4fa9-bf8c-94a7e06b8da5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "31971cd1-b08a-4cde-9851-79885c9859be",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cc02b132-bb15-4444-a1f0-e21719081be7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Actions",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CheckForButton",
            "id": "531e95d1-b1f1-4171-9185-387f55b9790e",
            "actions": [
                {
                    "name": "CheckForButtonAction",
                    "type": "Button",
                    "id": "f44c52aa-1434-473a-968d-e07e5bf6babb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6820a2f-77c3-482a-8696-2309cc8e86e4",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CheckForButtonAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}